y.output
Terminals which are not used

   BAR


State 281 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: translation_unit

    2 translation_unit: external_declaration
    3                 | translation_unit external_declaration

    4 external_declaration: function_definition
    5                     | declaration

    6 @1: /* empty */

    7 function_definition: declaration_specifiers declarator @1 compound_statement

    8 @2: /* empty */

    9 function_definition: declarator @2 compound_statement

   10 declaration_list_opt: /* empty */
   11                     | declaration_list

   12 declaration_list: declaration
   13                 | declaration_list declaration

   14 declaration: declaration_specifiers init_declarator_list_opt SEMICOLON

   15 declaration_specifiers: type_specifier
   16                       | storage_class_specifier
   17                       | type_specifier declaration_specifiers
   18                       | storage_class_specifier declaration_specifiers

   19 storage_class_specifier: AUTO_SYM
   20                        | STATIC_SYM
   21                        | TYPEDEF_SYM

   22 init_declarator_list_opt: /* empty */
   23                         | init_declarator_list

   24 init_declarator_list: init_declarator
   25                     | init_declarator_list COMMA init_declarator

   26 init_declarator: declarator
   27                | declarator ASSIGN initializer

   28 initializer: constant_expression
   29            | LR initializer_list RR

   30 initializer_list: initializer
   31                 | initializer_list COMMA initializer

   32 type_specifier: struct_type_specifier
   33               | enum_type_specifier
   34               | TYPE_IDENTIFIER

   35 @3: /* empty */

   36 @4: /* empty */

   37 struct_type_specifier: struct_or_union IDENTIFIER @3 LR @4 struct_declaration_list RR

   38 @5: /* empty */

   39 @6: /* empty */

   40 struct_type_specifier: struct_or_union @5 LR @6 struct_declaration_list RR
   41                      | struct_or_union IDENTIFIER

   42 struct_or_union: STRUCT_SYM
   43                | UNION_SYM

   44 struct_declaration_list: struct_declaration
   45                        | struct_declaration_list struct_declaration

   46 struct_declaration: type_specifier struct_declarator_list SEMICOLON

   47 struct_declarator_list: struct_declarator
   48                       | struct_declarator_list COMMA struct_declarator

   49 struct_declarator: declarator

   50 @7: /* empty */

   51 enum_type_specifier: ENUM_SYM IDENTIFIER @7 LR enumerator_list RR

   52 @8: /* empty */

   53 enum_type_specifier: ENUM_SYM @8 LR enumerator_list RR
   54                    | ENUM_SYM IDENTIFIER

   55 enumerator_list: enumerator
   56                | enumerator_list COMMA enumerator

   57 enumerator: IDENTIFIER

   58 @9: /* empty */

   59 enumerator: IDENTIFIER @9 ASSIGN expression

   60 declarator: pointer direct_declarator
   61           | direct_declarator

   62 pointer: STAR
   63        | STAR pointer

   64 direct_declarator: IDENTIFIER
   65                  | LP declarator RP
   66                  | direct_declarator LB constant_expression_opt RB

   67 @10: /* empty */

   68 direct_declarator: direct_declarator LP @10 parameter_type_list_opt RP

   69 parameter_type_list_opt: /* empty */
   70                        | parameter_type_list

   71 parameter_type_list: parameter_list
   72                    | parameter_list COMMA DOTDOTDOT

   73 parameter_list: parameter_declaration
   74               | parameter_list COMMA parameter_declaration

   75 parameter_declaration: declaration_specifiers declarator
   76                      | declaration_specifiers abstract_declarator_opt

   77 abstract_declarator_opt: /* empty */
   78                        | abstract_declarator

   79 abstract_declarator: direct_abstract_declarator
   80                    | pointer
   81                    | pointer direct_abstract_declarator

   82 direct_abstract_declarator: LP abstract_declarator RP
   83                           | LB constant_expression_opt RB
   84                           | direct_abstract_declarator LB constant_expression_opt RB
   85                           | LP parameter_type_list_opt RP
   86                           | direct_abstract_declarator LP parameter_type_list_opt RP

   87 statement_list_opt: /* empty */
   88                   | statement_list

   89 statement_list: statement
   90               | statement_list statement

   91 statement: labeled_statement
   92          | compound_statement
   93          | expression_statement
   94          | selection_statement
   95          | iteration_statement
   96          | jump_statement

   97 labeled_statement: CASE_SYM constant_expression COLON statement
   98                  | DEFAULT_SYM COLON statement

   99 @11: /* empty */

  100 compound_statement: LR @11 declaration_list_opt statement_list_opt RR

  101 expression_statement: SEMICOLON
  102                     | expression SEMICOLON

  103 selection_statement: IF_SYM LP expression RP statement
  104                    | IF_SYM LP expression RP statement ELSE_SYM statement
  105                    | SWITCH_SYM LP expression RP statement

  106 iteration_statement: WHILE_SYM LP expression RP statement
  107                    | DO_SYM statement WHILE_SYM LP expression RP SEMICOLON
  108                    | FOR_SYM LP for_expression RP statement

  109 for_expression: expression_opt SEMICOLON expression_opt SEMICOLON expression_opt

  110 expression_opt: /* empty */
  111               | expression

  112 jump_statement: RETURN_SYM expression SEMICOLON
  113               | CONTINUE_SYM SEMICOLON
  114               | BREAK_SYM SEMICOLON

  115 arg_expression_list_opt: /* empty */
  116                        | arg_expression_list

  117 arg_expression_list: assignment_expression
  118                    | arg_expression_list COMMA assignment_expression

  119 constant_expression_opt: /* empty */
  120                        | constant_expression

  121 constant_expression: expression

  122 expression: comma_expression

  123 comma_expression: assignment_expression

  124 assignment_expression: conditional_expression
  125                      | unary_expression ASSIGN assignment_expression

  126 conditional_expression: logical_or_expression

  127 logical_or_expression: logical_and_expression
  128                      | logical_or_expression BARBAR logical_and_expression

  129 logical_and_expression: bitwise_or_expression
  130                       | logical_and_expression AMPAMP bitwise_or_expression

  131 bitwise_or_expression: bitwise_xor_expression

  132 bitwise_xor_expression: bitwise_and_expression

  133 bitwise_and_expression: equality_expression

  134 equality_expression: relational_expression
  135                    | equality_expression EQL relational_expression
  136                    | equality_expression NEQ relational_expression

  137 relational_expression: shift_expression
  138                      | relational_expression LSS shift_expression
  139                      | relational_expression GTR shift_expression
  140                      | relational_expression LEQ shift_expression
  141                      | relational_expression GEQ shift_expression

  142 shift_expression: additive_expression

  143 additive_expression: multiplicative_expression
  144                    | additive_expression PLUS multiplicative_expression
  145                    | additive_expression MINUS multiplicative_expression

  146 multiplicative_expression: cast_expression
  147                          | multiplicative_expression STAR cast_expression
  148                          | multiplicative_expression SLASH cast_expression
  149                          | multiplicative_expression PERCENT cast_expression

  150 cast_expression: unary_expression
  151                | LP type_name RP cast_expression

  152 unary_expression: postfix_expression
  153                 | PLUSPLUS unary_expression
  154                 | MINUSMINUS unary_expression
  155                 | AMP cast_expression
  156                 | STAR cast_expression
  157                 | EXCL cast_expression
  158                 | MINUS cast_expression
  159                 | PLUS cast_expression
  160                 | SIZEOF_SYM unary_expression
  161                 | SIZEOF_SYM LP type_name RP

  162 postfix_expression: primary_expression
  163                   | postfix_expression LB expression RB
  164                   | postfix_expression LP arg_expression_list_opt RP
  165                   | postfix_expression PERIOD IDENTIFIER
  166                   | postfix_expression ARROW IDENTIFIER
  167                   | postfix_expression PLUSPLUS
  168                   | postfix_expression MINUSMINUS

  169 primary_expression: IDENTIFIER
  170                   | INTEGER_CONSTANT
  171                   | FLOAT_CONSTANT
  172                   | CHARACTER_CONSTANT
  173                   | STRING_LITERAL
  174                   | LP expression RP

  175 type_name: declaration_specifiers abstract_declarator_opt


Terminals, with rules where they appear

$end (0) 0
error (256)
IDENTIFIER (258) 37 41 51 54 57 59 64 165 166 169
TYPE_IDENTIFIER (259) 34
FLOAT_CONSTANT (260) 171
INTEGER_CONSTANT (261) 170
CHARACTER_CONSTANT (262) 172
STRING_LITERAL (263) 173
AUTO_SYM (264) 19
STATIC_SYM (265) 20
TYPEDEF_SYM (266) 21
STRUCT_SYM (267) 42
ENUM_SYM (268) 51 53 54
SIZEOF_SYM (269) 160 161
UNION_SYM (270) 43
IF_SYM (271) 103 104
ELSE_SYM (272) 104
WHILE_SYM (273) 106 107
DO_SYM (274) 107
FOR_SYM (275) 108
CONTINUE_SYM (276) 113
BREAK_SYM (277) 114
RETURN_SYM (278) 112
SWITCH_SYM (279) 105
CASE_SYM (280) 97
DEFAULT_SYM (281) 98
PLUS (282) 144 159
MINUS (283) 145 158
PLUSPLUS (284) 153 167
MINUSMINUS (285) 154 168
BAR (286)
AMP (287) 155
BARBAR (288) 128
AMPAMP (289) 130
STAR (290) 62 63 147 156
SLASH (291) 148
PERCENT (292) 149
ASSIGN (293) 27 59 125
ARROW (294) 166
COLON (295) 97 98
SEMICOLON (296) 14 46 101 102 107 109 112 113 114
DOTDOTDOT (297) 72
PERIOD (298) 165
COMMA (299) 25 31 48 56 72 74 118
EXCL (300) 157
LSS (301) 138
GTR (302) 139
LEQ (303) 140
GEQ (304) 141
EQL (305) 135
NEQ (306) 136
LP (307) 65 68 82 85 86 103 104 105 106 107 108 151 161 164 174
RP (308) 65 68 82 85 86 103 104 105 106 107 108 151 161 164 174
LB (309) 66 83 84 163
RB (310) 66 83 84 163
LR (311) 29 37 40 51 53 100
RR (312) 29 37 40 51 53 100


Nonterminals, with rules where they appear

$accept (58)
    on left: 0
program (59)
    on left: 1, on right: 0
translation_unit (60)
    on left: 2 3, on right: 1 3
external_declaration (61)
    on left: 4 5, on right: 2 3
function_definition (62)
    on left: 7 9, on right: 4
@1 (63)
    on left: 6, on right: 7
@2 (64)
    on left: 8, on right: 9
declaration_list_opt (65)
    on left: 10 11, on right: 100
declaration_list (66)
    on left: 12 13, on right: 11 13
declaration (67)
    on left: 14, on right: 5 12 13
declaration_specifiers (68)
    on left: 15 16 17 18, on right: 7 14 17 18 75 76 175
storage_class_specifier (69)
    on left: 19 20 21, on right: 16 18
init_declarator_list_opt (70)
    on left: 22 23, on right: 14
init_declarator_list (71)
    on left: 24 25, on right: 23 25
init_declarator (72)
    on left: 26 27, on right: 24 25
initializer (73)
    on left: 28 29, on right: 27 30 31
initializer_list (74)
    on left: 30 31, on right: 29 31
type_specifier (75)
    on left: 32 33 34, on right: 15 17 46
struct_type_specifier (76)
    on left: 37 40 41, on right: 32
@3 (77)
    on left: 35, on right: 37
@4 (78)
    on left: 36, on right: 37
@5 (79)
    on left: 38, on right: 40
@6 (80)
    on left: 39, on right: 40
struct_or_union (81)
    on left: 42 43, on right: 37 40 41
struct_declaration_list (82)
    on left: 44 45, on right: 37 40 45
struct_declaration (83)
    on left: 46, on right: 44 45
struct_declarator_list (84)
    on left: 47 48, on right: 46 48
struct_declarator (85)
    on left: 49, on right: 47 48
enum_type_specifier (86)
    on left: 51 53 54, on right: 33
@7 (87)
    on left: 50, on right: 51
@8 (88)
    on left: 52, on right: 53
enumerator_list (89)
    on left: 55 56, on right: 51 53 56
enumerator (90)
    on left: 57 59, on right: 55 56
@9 (91)
    on left: 58, on right: 59
declarator (92)
    on left: 60 61, on right: 7 9 26 27 49 65 75
pointer (93)
    on left: 62 63, on right: 60 63 80 81
direct_declarator (94)
    on left: 64 65 66 68, on right: 60 61 66 68
@10 (95)
    on left: 67, on right: 68
parameter_type_list_opt (96)
    on left: 69 70, on right: 68 85 86
parameter_type_list (97)
    on left: 71 72, on right: 70
parameter_list (98)
    on left: 73 74, on right: 71 72 74
parameter_declaration (99)
    on left: 75 76, on right: 73 74
abstract_declarator_opt (100)
    on left: 77 78, on right: 76 175
abstract_declarator (101)
    on left: 79 80 81, on right: 78 82
direct_abstract_declarator (102)
    on left: 82 83 84 85 86, on right: 79 81 84 86
statement_list_opt (103)
    on left: 87 88, on right: 100
statement_list (104)
    on left: 89 90, on right: 88 90
statement (105)
    on left: 91 92 93 94 95 96, on right: 89 90 97 98 103 104 105 106
    107 108
labeled_statement (106)
    on left: 97 98, on right: 91
compound_statement (107)
    on left: 100, on right: 7 9 92
@11 (108)
    on left: 99, on right: 100
expression_statement (109)
    on left: 101 102, on right: 93
selection_statement (110)
    on left: 103 104 105, on right: 94
iteration_statement (111)
    on left: 106 107 108, on right: 95
for_expression (112)
    on left: 109, on right: 108
expression_opt (113)
    on left: 110 111, on right: 109
jump_statement (114)
    on left: 112 113 114, on right: 96
arg_expression_list_opt (115)
    on left: 115 116, on right: 164
arg_expression_list (116)
    on left: 117 118, on right: 116 118
constant_expression_opt (117)
    on left: 119 120, on right: 66 83 84
constant_expression (118)
    on left: 121, on right: 28 97 120
expression (119)
    on left: 122, on right: 59 102 103 104 105 106 107 111 112 121
    163 174
comma_expression (120)
    on left: 123, on right: 122
assignment_expression (121)
    on left: 124 125, on right: 117 118 123 125
conditional_expression (122)
    on left: 126, on right: 124
logical_or_expression (123)
    on left: 127 128, on right: 126 128
logical_and_expression (124)
    on left: 129 130, on right: 127 128 130
bitwise_or_expression (125)
    on left: 131, on right: 129 130
bitwise_xor_expression (126)
    on left: 132, on right: 131
bitwise_and_expression (127)
    on left: 133, on right: 132
equality_expression (128)
    on left: 134 135 136, on right: 133 135 136
relational_expression (129)
    on left: 137 138 139 140 141, on right: 134 135 136 138 139 140
    141
shift_expression (130)
    on left: 142, on right: 137 138 139 140 141
additive_expression (131)
    on left: 143 144 145, on right: 142 144 145
multiplicative_expression (132)
    on left: 146 147 148 149, on right: 143 144 145 147 148 149
cast_expression (133)
    on left: 150 151, on right: 146 147 148 149 151 155 156 157 158
    159
unary_expression (134)
    on left: 152 153 154 155 156 157 158 159 160 161,
    on right: 125 150 153 154 160
postfix_expression (135)
    on left: 162 163 164 165 166 167 168, on right: 152 163 164 165
    166 167 168
primary_expression (136)
    on left: 169 170 171 172 173 174, on right: 162
type_name (137)
    on left: 175, on right: 151 161


state 0

    0 $accept: . program $end

    IDENTIFIER       shift, and go to state 1
    TYPE_IDENTIFIER  shift, and go to state 2
    AUTO_SYM         shift, and go to state 3
    STATIC_SYM       shift, and go to state 4
    TYPEDEF_SYM      shift, and go to state 5
    STRUCT_SYM       shift, and go to state 6
    ENUM_SYM         shift, and go to state 7
    UNION_SYM        shift, and go to state 8
    STAR             shift, and go to state 9
    LP               shift, and go to state 10

    program                  go to state 11
    translation_unit         go to state 12
    external_declaration     go to state 13
    function_definition      go to state 14
    declaration              go to state 15
    declaration_specifiers   go to state 16
    storage_class_specifier  go to state 17
    type_specifier           go to state 18
    struct_type_specifier    go to state 19
    struct_or_union          go to state 20
    enum_type_specifier      go to state 21
    declarator               go to state 22
    pointer                  go to state 23
    direct_declarator        go to state 24


state 1

   64 direct_declarator: IDENTIFIER .

    $default  reduce using rule 64 (direct_declarator)


state 2

   34 type_specifier: TYPE_IDENTIFIER .

    $default  reduce using rule 34 (type_specifier)


state 3

   19 storage_class_specifier: AUTO_SYM .

    $default  reduce using rule 19 (storage_class_specifier)


state 4

   20 storage_class_specifier: STATIC_SYM .

    $default  reduce using rule 20 (storage_class_specifier)


state 5

   21 storage_class_specifier: TYPEDEF_SYM .

    $default  reduce using rule 21 (storage_class_specifier)


state 6

   42 struct_or_union: STRUCT_SYM .

    $default  reduce using rule 42 (struct_or_union)


state 7
